fixes nav bar mobile overlap

--- a/website/public/res/css/header.css
+++ b/website/public/res/css/header.css
@@ -93,6 +93,7 @@
     .nav-container
     {
         position: relative;
+        z-index: 1;
     }
 
     .nav-menu
